--- a/package.json
+++ b/package.json
@@ -24,37 +24,35 @@
   },
   "devDependencies": {
     "co-mocha": "^1.1.2",
-    "dotenv": "2.0.0",
+    "dotenv": "6.0.0",
     "istanbul": "^0.4.2",
     "koa": "^1.1.2",
     "koa-better-body": "1.0.17",
-    "mocha": "^2.3.4",
-    "mockery": "^1.4.0",
-    "nock": "^3.4.0",
-    "should": "^8.2.1",
-    "supertest": "^2.0.0"
+    "mocha": "^5.2.0",
+    "mockery": "^2.1.0",
+    "nock": "^9.4.2",
+    "should": "^13.2.1",
+    "supertest": "^3.1.0"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
-    "bunyan": "^1.5.1",
-    "bunyan-prettystream": "^0.1.3",
-    "bunyan-raven": "^0.4.0",
     "co": "4.6.0",
-    "debug": "^2.2.0",
+    "debug": "^3.1.0",
     "graphite-udp": "^1.0.0",
     "intl": "^1.0.1",
     "join-path": "^1.1.0",
     "koa-router": "5.4.0",
-    "lodash": "4.6.1",
-    "lru-cache": "^2.7.0",
+    "lodash": "4.17.10",
+    "lru-cache": "^4.1.3",
     "moment": "^2.10.6",
     "os-utils": "0.0.14",
-    "raven": "^0.8.1",
+    "pino": "^4.17.3",
+    "raven": "^1.2.1",
     "redis": "^2.3.1",
     "request": "^2.74.0",
-    "request-promise": "^2.0.1",
-    "socket.io-client": "^1.3.7",
+    "request-promise": "^4.2.2",
+    "socket.io-client": "^2.1.1",
     "sprintf-js": "^1.0.3",
-    "uuid": "^2.0.1"
+    "uuid": "^3.3.2"
   }
 }
